# newsletter

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  spec.yaml.tmpl  sqlx-data.json
.github/workflows/: main.yml  other_branches.yml  scheduled_coverage_and_clippy.yml  tests.yml
configuration/: base.yaml
migrations/: 20211125200913_make_status_not_null_in_subscriptions.sql  20211125201516_create_subscription_tokens_table.sql
scripts/: init_db.sh  set_env.sh  update_spec.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
