[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dev-dependencies]
actix-rt="2.0"
tokio= { version = "1", features = ["rt", "macros"] }
once_cell = "1.8"
claim = "0.5"
linkify = "0.7"
serde_json = "1.0"
wiremock = "0.5"

[dependencies]
actix-web="=4.0.0-beta.9"
actix-http="=3.0.0-beta.10"
anyhow = "1"
base64 = "0.13"
serde={version = "1", features = ["derive"]}
config="0.11"
uuid= { version = "0.8", features = ["v4"] }
chrono = "0.4"
fake = "~2.3"
quickcheck = "~0.9"
quickcheck_macros = "~0.9"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", features = ["json"] }
sha3 = "0.9"
argon2 = { version = "0.3", features = ["std"] }
thiserror = "1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.4.0-beta.12"
serde-aux = "3.0"
log = "0.4"
unicode-segmentation = "1.8"
validator = "0.14.0"

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

