[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
actix-rt="2.0"
reqwest="0.11"
tokio="1.0"

[dependencies]
actix-web="=4.0.0-beta.9"
actix-http="=3.0.0-beta.10"
serde={version = "1", features = ["derive"]}
config="0.11"
uuid= { version = "0.8", features = ["v4"] }
chrono = "0.4"

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

